...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/action_register" />

    <Button
        android:id="@+id/SignIn_MainActivity"
        style="@style/ButtonTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="16dp"
...
